# ragnroll

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  readme-transcribe.md  readme.md  requirements.txt  test_chat.py  test_chat_memory.py  test_chunk_document.py  test_chunk_pdf.py  test_code_review.py  test_embedding.py  test_ollama.py  test_ollama_embedding.py  test_qdrant_embed.py  test_qdrant_embed_pdf.py  test_qdrant_embed_webpage.py  test_qdrant_fetch.py  test_qdrant_search.py  test_slack_01_credentials.py  test_slack_02_users.py  test_slack_03_thread_replies.py  test_slack_04_key_takeaways.py  test_transcribe.py  test_transcribe_mac.py  test_webpage_fetch.py
utils/: chat_completions.py  chunk_document.py  chunk_pdf.py  chunk_webpage.py  config.py  contextual_chat_search.py  error.py  generate_embeddings.py  helpers.py  qdrant_embed.py  slack.py  terminal.py
